2003-07-18  Nick Garnett  <nickg@balti.calivar.com>

	* cdl/hal_mips_atlas.cdl:
        Changed values for CYGNUM_HAL_RTC_NUMERATOR,
        CYGNUM_HAL_RTC_DENOMINATOR and CYGNUM_HAL_RTC_PERIOD to
        "default_value" from "calculated". This makes it easier
        to change these values globally.
        
2003-05-08  Nick Garnett  <nickg@balti.calivar.com>

	* cdl/hal_mips_atlas.cdl: Change default_value of
	CYGSEM_HAL_ROM_MONITOR to zero.

2003-04-29  Nick Garnett  <nickg@balti.calivar.com>

	* cdl/hal_mips_atlas.cdl: Changed default startup from ROM to
	RAM.
	Also fixed component description.

2003-02-27  Nick Garnett  <nickg@calivar.com>

	* include/plf_intr.h: Defined CYGNUM_HAL_INTERRUPT_RTC to
	counter/compare register interrupt. Added implementations of
	HAL_INTERRUPT_MASK, HAL_INTERRUPT_UNMASK, and
	HAL_INTERRUPT_ACKNOWLEDGE that will work in eCos rather than just
	RedBoot.

	* src/plf_misc.c (hal_platform_init): Changed spelling of eCos for
	the LED to match the official typography.

2002-08-06  Gary Thomas  <gary@chez-thomas.org>
2002-08-06  Motoya Kurotsu <kurotsu@allied-telesis.co.jp>	

	* src/ser16c550c.c: I/O channel data can't be constant - contains
	timeout information which can be changed.

2001-10-31  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/hal_mips_atlas.cdl: Indicate support of variable baud rates.

2001-07-20  David Woodhouse  <dwmw2@redhat.com>

	* src/redboot_cmds.c: Remove. Obsoleted by generic MIPS version.
	* cdl/hal_mips_atlas.cdl: Remove reference to $1

2001-04-27  Mark Salter  <msalter@redhat.com>

	* include/platform.inc (hal_intc_decode): Recognize all external
	interrupts.
	* include/plf_intr.h: Add external interrupts to list of supported
	interrupts.
	* src/platform.S: Allocate space for new interrupt vectors.

2001-03-09  Jesper Skov  <jskov@redhat.com>

	* src/redboot_cmds.c: Added (linux) exec command.
	* cdl/hal_mips_atlas.cdl: Build redboot cmd file.

2001-03-08  Jesper Skov  <jskov@redhat.com>
